update GitLabApi